tests/parser/pass/expressionWithTypeOf1.c
int main(void) {
  int i;
  i = sizeof(1+1);
  i = sizeof 1+1;
}
