tests/parser/fail/not_a_loop.c
int main(void) {
  int i;
  do {
    i = i + 1;
  }
  return 0;
}
